Modified Git Ignore file to apply changes only for Phase 2

--- a/.gitignore
+++ b/.gitignore
@@ -27,93 +27,28 @@ MANIFEST
 *.ckpt
 *.pkl
 
-# Data and Checkpoints
+# Phase2 specific exclusions
 Phase2/data/
 Phase2/Checkpoints/
 Phase2/Logs/
 Phase2/Output/
 
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# PyTorch model files
+*.pth
+*.pt
+*.ckpt
+*.pkl
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Environment
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# Logs
-*.log
-logs/
-Logs/
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
-
-# Output files
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.bmp
-*.tiff
-*.tif
-*.pdf
-*.eps
-*.svg
-
-# Model files (large binary files)
-*.h5
-*.hdf5
-*.model
-*.weights
-*.bin
-
-# Configuration files with sensitive data
-config.ini
-secrets.json
-.env.local
-.env.production
-
-# Test coverage
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Documentation build
-docs/_build/
-docs/build/
-
-# Backup files
-*.orig
-*.rej
-*.old
